// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Respond with referrers 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "count": 10,
          "domain": "null",
        },
        Object {
          "count": 6,
          "domain": "https://stacks.co",
        },
      ],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`Respond with referrers for one story 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Array [
        Object {
          "count": 5,
          "domain": "https://stacks.co",
        },
      ],
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
